# DirectCompositionSampleKerr

./: CMakeLists.txt  README.md
src/: Debug.h  Precompiled.h  Sample.cpp  Window.h
